[tool.poetry]
name = "job-hive"
version = "0.1.9"
description = "一个极简的分布式任务模块"
authors = ["YUNHAI <bybxbwg@foxmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
redis = "^6.4.0"
click = "^8.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
